# Coding-Cats

./: CMakeLists.txt  main.cpp
coding-cats-web/: package-lock.json  package.json
coding-cats-web/app/: globals.css  layout.tsx  page.tsx
coding-cats-web/app/api/submit/: route.ts
coding-cats-web/app/solve/: page.tsx
coding-cats-web/app/sprite-picker/: page.tsx
coding-cats-web/components/: AboutModal.tsx  BadgeCelebrationModal.tsx  CheatSheetModal.tsx  CodeEditor.tsx  FieldCat.tsx  FieldFlowers.tsx  HatShopModal.tsx  HistoryModal.tsx  LofiPlayer.tsx  ProblemDisplay.tsx  ShopModal.tsx  SolveModal.tsx  TestResults.tsx  TrackerDropdown.tsx
coding-cats-web/lib/: badges.ts  hats.ts  hints.ts  judge0.ts  problems.ts  shopItems.ts  sounds.ts  storage.ts
